# copier-python-uv

./: .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  LICENSE.jinja  Makefile  Makefile.jinja  README.md  copier.yaml  pyproject.toml  pyproject.toml.jinja
.github/instructions/: copier.instructions.md  pyproject.instructions.md  ruff.instructions.md
.github/workflows/: test.yml
docs/: architecture.md  ci.md  development.md
examples/: config-basic.yml
licenses/: apache-2.0  gpl-2.0  gpl-3.0  lgpl-2.0  lgpl-2.1  lgpl-3.0  mpl-2.0
my_tests/: conftest.py  test_conditional_sections.py  test_core_structure.py  test_exclusions.py  test_licenses.py
