[project]
name = "copier-python-uv"
version = "0.1.0"
description = "Copier template to bootstrap a Python package with uv and basic configuration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "copier>=9.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
