[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copier-python-uv"
version = "0.4.0"
description = "Copier template to bootstrap a Python package with uv and basic configuration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Patryk Kubiak", email = "8299306+kpatryk@users.noreply.github.com"}
]
keywords = ["copier", "template", "python", "uv", "packaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "copier>=9.11.0",
]

[project.urls]
Homepage = "https://github.com/patryk-gpl/copier-python-uv"
Repository = "https://github.com/patryk-gpl/copier-python-uv.git"
"Bug Tracker" = "https://github.com/patryk-gpl/copier-python-uv/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["my_tests"]
addopts = "--durations=5 --durations-min=0.0 --tb=short"
filterwarnings = [
    "ignore:Dirty template changes included automatically:copier._vcs.DirtyLocalWarning",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "I",    # isort
]
ignore = [
    "E501",  # line-too-long (formatter handles wrapping, but may exceed limit)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
